--- a/ivan.html
+++ b/ivan.html
@@ -25,7 +25,7 @@
                 text-transform: uppercase;
             }
             .section_banner {
-                background: url(img/banner-bg.jpg);
+                background: url(picture/banner-bg.jpg);
                 background-size: cover;
             }
             .container {
