--- a/lending.html
+++ b/lending.html
@@ -1,22 +1,72 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-    <title> lending </title>
-    <style>
-        .header {
-            padding: 4px;
+    <head>
+        <title> lending </title>
+        <style>
+            .header {
+            padding: 10px;
             position: fixed;
             left: 0px;
             top: 0px;
             right: 0px;
             z-index: 997;
-            background: rgba(138,144, 255,0.9)
+            background: violet;
         }    
-        
+        .menu-nav_item{
+            list-style: none;
+        }
+        .menu-nav_link{
+            text-decoration: none;
+            display: inline-block;
+            color: #fff;
+            font-weight: 400;
+            font-size: 12px;
+            outline: none;
+            text-transform: uppercase;
+        }
+        .section_banner{
+            background: url(picture/banner-bg.jpg);
+            background-size: cover;
+        }
+        .container {
+            max-width: 1140px;
+            padding: 0 15px;
+            margin: 0 auto;
+        }
+        .banner {
+            margin-top: 120px;
+            padding: 120px 0;
+        }
+        .banner-text_header {
+            color: white;
+            font-size: 48px;
+            font-weight: 600;
+            text-align: center;
+        }
+        .banner-text_body {
+            text-align: center;
+            padding: 10px 0;
+        }
+        .banner-text_body a {
+            text-decoration: none;
+            color: white;
+            font-weight: 300;
+            font-size: 14px;
+        }
+        .banner-text_body span {
+            color: white;
+            font-weight: 300;
+            font-size: 14px;
+            padding: 0 5px;
+        }
+        *{
+            padding: 0;
+            margin: 0;
+        }
         </style>
 </head>
 <body>
-    <header class="header"> </header>
+    <header class="header">
     <div class="container">
     <div class="menu">
     <div class="menu-logo"> 
@@ -24,9 +74,30 @@
      </div>
     <div class="menu-nav-container">
         <div class="conteiner"> </div>
+        <ul class="menu-nav">
+            <li class="menu-nav_item"> <a href="#" class="menu-nav_link"> home </a> </li>
+            <li class="menu-nav_item"> <a href="#" class="menu-nav_link"> about </a></li>
+        </ul>
      </div>
     </div>
-    </div>
 </header>
+<main class="main">
+    <section class="section section_banner">
+        <div class="container">
+            <div class="banner_container">
+                <div class="banner">
+                    <div class="banner-text">
+                        <h1 class="banner-text_header"> Products </h1>
+                    <div class="banner-text_body">
+                        <a href="#"> Home </a>
+                        <span> --> </span>
+                        <a href="#"> Products </a>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
 </body>
 </html>
