--- a/proect.html
+++ b/proect.html
@@ -8,32 +8,33 @@
             flex-direction: column; 
             text-align: center;
         }
-        .header {
-            background: aquamarine;
-            padding: 50px;
-        }
         .moscow {
             text-decoration: none;
-            top: 100px;
+            text-align: left;
         }
         .mon {
             text-decoration: none;
-            top: 101px;
         }
     </style>
     </head>
     <body>
+        <p> <img src="panorama.jpg" alt="html" width=1590> </p>
             <div class="container">
                     <header class="header"> <h1> название </h1> </header>
                     <a class="moscow" href="">
-                        <p class="moscow" align="left"> 
-                            Обзорная экскурсия по Москве
+                        <p class="moscow"> 
+                           <h3> Обзорная экскурсия по Москве </h3>
                         </p>
                     </a>                
                     <a class="mon" href="">
-                          <p class="mon" align="left"> 
-                                Памятники
-                                </p>
+                        <p class="mon" align="left"> 
+                           <h3> Экскурсия по памятникам </h3> 
+                        </p>
                             </a>
+                     <a class="mon" href="">
+                        <p class="mon" align="left"> 
+                           <h3> Экскурсия, посвященная литературной тематике </h3>
+                        </p>
+                    </a>
     </body>
 </html>
