--- a/moscow.html
+++ b/moscow.html
@@ -1,42 +1,142 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title> Обзорная экскурсия по Москве</title>
-    <style>
-    .container{
-        display: flex;
-        flex-direction: column; 
-        text-align: center;
-    }
-    </style>
-        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-        crossorigin="anonymous">
-</head>
-</script>
-<body>   
-    <header class="header">
-        <h1> Обзорная экскурсия по Москве </h1>
-    </header>
-    <main>
-        <div class="column">
-            <div class="col-sm-12 col-lg-12">
-                <div class="row">
-                <p>
-                Представляю вашему вниманию обзорную экскурсию по Москве. Начнем знакомство со столицей с прогулки по Старому и Новому Арбату (станици метро Смоленская) <br>
-                    chgvjkgjcchgfjhlhfghjk
-                </p>
-                <img src="metro.jpg" width=200 height=150> 
-                <p>Со станции метро вы попадаете на Старый Арбат, если Вы будете идти прямо, то через 7 минут по правую сторону от себя Вы увидите двухэтажное бирюзовое здание — это Музей-квартира А.С.Пушкина.</p>
-                <div class="column">
-                <img src="arbat.jpg" width=200 height=150> 
-                cmdfnvdfnbogfjbojbldzn
-            </div>
+<!DOCTYPE html> 
+<html> 
+ <head> 
+     <title> Обзорная экскурсия по Москве</title>
+     <style> 
+     .container{ 
+         display: flex; 
+         flex-direction: column;  
+         text-align: center; 
+      } 
+      .header{
+          flex-direction: column;
+          text-align: center;
+      }
+      </style> 
+          <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" 
+          crossorigin="anonymous"> 
+  </head> 
+  <body>    
+      <header class="header"> 
+          <h1> Обзорная экскурсия по Москве </h1> 
+      </header> 
+      <main class="main">
+            
+        <div class="container">
+                <p>Представляю Вашему вниманию обзорную экскурсию по Москве. Начнем знакомство со столицей с прогулки по Старому и Новому Арбату (станиция метро "Смоленская"; Арбато-Покровская линия). </p>
+            <div class="row">
+                <div class="col-sm-12 col-lg-3">
+                    <div class="card">
+                        <img src="sml.jpg" width=200 height=150 class="card-img-top">
+                        <div class="card-body">
+                            <h6> Рельефы павильона станции метро "Смоленская" </h6>
+                        </div>
+                    </div>
                 </div>
-            </div> 
+                <div class="col-sm-12 col-lg-9">
+                        <p> Хотелось бы сказать пару слов о самой станции...тема героизма русских защитников Отечества стала основой в оформлении внушительного по размерам павильона (1953г., архитекторы А.Ф.Стрелков, О.А.Великорецкий, соавтор Е.В.Васильев). Он решен в виде нарядного портика с тремя высокими арками, верхняя часть которого украшена четырьмя медальонами с изображением воинов, цветочных розеток и звезд.<br>
+                            В круглое медальонное поле вписаны рельефные фигуры русских солдат 1612, 1812, 1917, 1945 годов, сражающихся с врагом. Две арки служат для входа и выхода из метро. Они декорированы двумя черными колоннами с бронзововыми капителями и перевитыми лентами стволами. <br> Ребристый купол круглого зала наземного павильона вверху декорирован огромным горельефным венком, в центре которого помещена золотая звезда с отходящими от неё лучами, а внизу – мозаичный фриз с орденом Победы, военными трофеями, боевыми знаменами и цветочными орнаментами. </p>
+                </div>
+            </div>
         </div>
+        <div class="container">
+                <p> Со станции метро вы попадаете на Старый Арбат. Пройдя по улице 150 метров, Вы увидите двухэтажное бирюзовое здание – Музей-квартира А.С.Пушкина. </p>
+            <div class="row">
+                <div class="col-sm-12 col-lg-3">
+                    <div class="card">
+                        <img src="arbat.jpg" width=200 height=150 class="card-img-top">
+                        <div class="card-body">
+                            <h6> Музей-квартира А.С.Пушкина </h6>
+                            <p> Адрес: Арбат, 53 ст1 <br> Часы работы: среда, пятница-воскресенье: 10:00-18:00; четверг: 12:00-21:00 <br> Санитарный день: последняя пятница месяца <br> Часы работы кассы: среда 10:00-17:30; четверг: 12:00-20:30; пятница-воскресенье: 10:00-17:30 </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-lg-9">
+                        <p>В Москве это единственный музеефицированный мемориал великого русского поэта. Здание включено в список памятников культуры государственного значения. 23 января 1831 года А.С. Пушкин заключил договор о найме квартиры в особняке на Арбате, принадлежавшем дворянской семье Хитрово. 17 февраля 1831 года, накануне свадьбы, на «мальчишник» у поэта собрались его московские друзья. Сюда после венчания в Храме Большого Вознесения у Никитских ворот А.С. Пушкин привез свою молодую жену. Здесь прошли первые три месяца счастливой семейной жизни Пушкиных. При желании можете посетить музей в любое удобное для вас время, а я предлагаю отправиться дальше по нашему маршруту </p>
+                        <p> Повернув в четвертый переулок налево и пройдя пару минут, Вы окажетесь на Новом Арбате. Для тех кто проголодался, предлагаю перекусить в любом из кафе на Новом Арбате, их здесь на любой вкус и кошелек. </p>
+                         <p> Прогуливаясь по Новому Арбату (в сторону его начала), мимо площади Арбатские Ворота, переходя на улицу Воздвиженка и минут через 6 Вы оказываетесь у Александровского Сада. Этот сад был основан в 1812 году, площадь 10 гектар и состоит из 3 частей: Верхнего, Среднего и Нижнего садов. <br> Предлагаю Вам прогуляться там, посмотреть на Могилу Неизвестного Солдата и Вечный огонь, Грот "Руины", Обелиск, Памятник патриарху Гермогену, Фонтанный комплекс, Памятник Александру I.</p>
+                        <p> Мемориал "Могила Неизвестного Солдата". В 25-летнюю годовщину разгрома гитлеровских войск под Москвой из братской могилы близ Зеленограда был поднят прах Неизвестного солдата и 3 декабря 1966 года с воинскими почестями перезахоронен в Александровском саду у стен Кремля. <br> Мемориально-архитектурный ансамбль "Могила Неизвестного Солдата" был создан у северной стены Кремля по проекту академика Академии художеств СССР, народного художника СССР, лауреата пяти Сталинских премий скульптора Н.В.Томского и известных архитекторов Д.И.Бурдина, В.А.Климова, Ю.Р.Рабаева. Мемориал был открыт 8 мая 1967 года в торжественной обстановке в присутствии государственных лиц и почётных гостей. Вечный огонь, доставленный из Ленинграда с Марсова поля, был зажжён генеральным секретарём ЦК КПСС Л.И.Брежневым, а факел передал ему Герой Советского Союза А.П.Маресьев.</p>
+                    </div>
+            </div>
+        </div>
+        <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-lg-3">
+                <div class="card">
+                    <img src="mogila.jpg" width=200 class="card-img-top">
+                    <div class="card-body">
+                        <h6> Могила Неизвестного Солдата </h6>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-lg-9">
+                    <p> Композиция мемориального комплекса включает в себя надгробную плиту, выполненную в виде блока из темно-красного порфира, на которой лежит боевое знамя, ветвь лавра и солдатская каска (бронза). Выполненное с реалистической достоверностью полотнище флага, украшенное бахромой и двумя кистями, ниспадает красивыми складками. <br> Главное место в мемориале занимает Вечный огонь славы, чаша которого находится в центре пятиконечной объемной звезды, расположенной в нише квадратной формы. На ее поверхности объемными буквами выложены слова: "Имя твое неизвестно, подвиг твой бессмертен", которые приписывают С.А.Михалкову. Ещё одна надпись: "Павшим за Родину", помещенная между датами начала и окончания Великой Отечественной войны, нанесена на стене из малинового кварцита слева от могилы.</p>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-lg-3">
+                <div class="card">
+                    <img src="goroda.jpg" width=200 class="card-img-top">
+                    <div class="card-body">
+                        <h6> Аллея городов-героев</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-lg-9">
+                    <p> Справа от надгробия расположена гранитная аллея с 12-ю прямоугольными трубами из темно-красного порфира, в которых находятся капсулы с землей, собранной с мест ожесточенных боев. На лицевой стороне поверхности каждой из них дано название города-героя и нанесена барельефная золотая звезда. За аллеей с городами-героями установлена стела из красного гранита в виде десятиметрового блока, на котором даны названия 45 городов воинской славы. </p>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-lg-3">
+                <div class="card">
+                    <img src="grot.jpg" width=200 class="card-img-top">
+                    <div class="card-body">
+                        <h6>Грот "Руины" </h6>
+                        <p> Другое название: Итальянский грот</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-lg-9">
+                    <p>Грот, созданный в 1841 году О. И. Бове, стал вещественным напоминанием о возрождении Москвы после разорения в 1812 французскими войсками. В стены грота вмонтированы обломки старинных зданий, разрушенных во время пребывания наполеоновских войск в городе.Грот "Руины", также известный как "Итальянский грот" занимает небольшое углубление у подножия Средней Арсенальной башни Кремля. Под полукруглой аркой из красного кирпича и черного гранита находятся мраморные ворота с четырьмя массивными колоннами. Крылья грота оформлены осколками московских зданий, разрушенных наполеоновской армией. Лестница в южной части грота ведет на смотровую площадку, украшенную двумя скульптурами львов. Во время праздничных мероприятий, а также просто во время прогулок царских особ по саду, в гроте играл царский оркестр. </p>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-lg-3">
+                <div class="card">
+                    <img src="obelisk.jpg" width=200 class="card-img-top">
+                    <div class="card-body">
+                        <h6> Романовский обелиск в честь 300-летия царствования дома Романовых </h6>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-lg-9">
+                    <p> Романовский обелиск в честь 300-летия царствования дома Романовых - удивительный мемориал, установленный в Александровском саду в 1914 году. Изначально посвящённый династии Романовых, в советские годы он был переделан в Памятник-обелиск выдающимся мыслителям и деятелям борьбы за освобождение трудящихся, а в наши дни - фактически утрачен при попытке восстановления изначального облика; таким образом, современный обелиск представляет собой неточную копию исторического. Четырёхгранный обелиск выполнен из гранита и установлен на массивном кубическом основании. На лицевой грани куба высечено посвящение: "В память 300-летия воцарения дома Романовых", а также изображены Георгий Победоносец и малые гербы российских княжеств, губерний и областей в щитках. Вершину обелиска венчает позолоченный двуглавый орёл, под которым размещён родовой герб бояр Романовых – грифон с мечом и щитом, а ниже во всю высоту монумента нанесены имена царей и императоров из династии Романовых от Михаила Фёдоровича до Николая II. На обелиске отсутствует лишь имя Ивана VI Антоновича – императора-младенца, который правил в возрасте 1 года, затем был свергнут и провёл всю жизнь в заточении, пока в 23 года его не убили.</p>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-lg-3">
+                <div class="card">
+                    <img src="germogen.jpg" width=200 class="card-img-top">
+                    <div class="card-body">
+                        <h6> Памятник патриарху Ермогену (Гермогену) </h6>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-lg-9">
+                    <p> 25 мая 2013 года в Александровском саду по проекту народного художника России, академика Академии художеств С.А.Щербакова (архитектор И.Н.Воскресенский) в торжественной обстановке был открыт долгожданный памятник патриарху Гермогену (бронза, гранит). Величественная бронзовая фигура, выполненная в реалистической манере, установлена на высоком гранитном постаменте, с обеих сторон которого расположены рельефы со сценами его деяний. </p>
+        </div>
+    </div>
     </main>
-    <footer>
+     <footer> 
 
-    </footer>
-</body>
-</html>
+    </footer> 
+  </body> 
+ </html>
