--- a/proect.html
+++ b/proect.html
@@ -1,53 +1,53 @@
-<!DOCTYPE HTML>
-<html>
-    <head>
-        <title> Тематические экскурсии по Москве </title>
-        <style>
-        .container{
-            display: flex;
-            flex-direction: column; 
-            text-align: center;
-        }
-        .moscow {
-            text-decoration: none;
-            text-align: left;
-        }
-        .mon {
-            text-decoration: none;
-            text-align: left;
-        }
-        .lit {
-            text-decoration: none;
-            text-align: left;
-        }
-    </style>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-    crossorigin="anonymous">
-    </head>
-    <body>
-        <p> <img src="panorama.jpg" width=1590> </p>
-            <div class="container">
-                    <header class="header"> <h1> Тематические экскурсии по Москве </h1> </header>
-                <main>
-                </div>           
-                    <a class="moscow" href="file:///C:/Users/User/Desktop/%D0%BA%D1%81%D1%8E%D1%88%D0%B0%20%D0%BB%D0%B5%D1%81%D0%BD%D0%B0%D1%8F/moscow.html">
-                        <p class="moscow"> 
-                           <h3> Обзорная экскурсия по Москве </h3>
-                        </p>
-                    </a>                
-                    <a class="mon" href="">
-                        <p class="mon" align="left"> 
-                           <h3> Экскурсия по памятникам </h3> 
-                        </p>
-                            </a>
-                     <a class="lit" href="">
-                        <p class="lit" align="left"> 
-                           <h3> Экскурсия, посвященная литературной тематике </h3>
-                        </p>
-                    </a>
-                </main>
-                <footer>
-                    
-                </footer>
-    </body>
-</html>
+<!DOCTYPE HTML> 
+<html> 
+<head> 
+    <title> Тематические экскурсии по Москве </title> 
+        <style> 
+          .container{ 
+              display: flex; 
+              flex-direction: column;  
+              text-align: center; 
+          } 
+          .moscow { 
+              text-decoration: none; 
+              text-align: left; 
+          } 
+          .mon { 
+              text-decoration: none; 
+              text-align: left; 
+          } 
+          .lit { 
+              text-decoration: none; 
+              text-align: left; 
+          } 
+      </style> 
+      <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" 
+      crossorigin="anonymous"> 
+      </head> 
+    <body> 
+          <p> <img src="panorama.jpg" width=1920> </p> 
+              <div class="container"> 
+                      <header class="header"> <h1> Тематические экскурсии по Москве </h1> </header> 
+                  <main> 
+                  </div>            
+                      <a class="moscow" href="file:///C:/Users/%D0%A2%D0%B5%D1%85%D0%BD%D0%BE/Desktop/%D0%BA%D1%81%D1%8E%D1%88%D0%B0%20%D0%BB%D0%B5%D1%81%D0%BD%D0%B0%D1%8F/moscow.html"> 
+                          <p class="moscow">  
+                             <h3> Обзорная экскурсия по Москве </h3> 
+                          </p> 
+                      </a>                 
+                      <a class="mon" href=""> 
+                          <p class="mon" align="left">  
+                             <h3> Экскурсия по памятникам </h3>  
+                          </p> 
+                              </a> 
+                       <a class="lit" href=""> 
+                          <p class="lit" align="left">  
+                             <h3> Экскурсия, посвященная литературной тематике </h3> 
+                          </p> 
+                      </a> 
+                  </main> 
+                  <footer> 
+                       
+                  </footer> 
+        </body> 
+</html> 
