--- a/moscow.html
+++ b/moscow.html
@@ -11,6 +11,10 @@
       .header{
           flex-direction: column;
           text-align: center;
+          background: plum;
+      }
+      .container{
+          background-color: seashell;
       }
       </style> 
           <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" 
@@ -21,8 +25,7 @@
           <h1> Обзорная экскурсия по Москве </h1> 
       </header> 
       <main class="main">
-            
-        <div class="container">
+            <div class="container">
                 <p>Представляю Вашему вниманию обзорную экскурсию по Москве. Начнем знакомство со столицей с прогулки по Старому и Новому Арбату (станиция метро "Смоленская"; Арбато-Покровская линия). </p>
             <div class="row">
                 <div class="col-sm-12 col-lg-3">
@@ -54,7 +57,7 @@
                 <div class="col-sm-12 col-lg-9">
                         <p>В Москве это единственный музеефицированный мемориал великого русского поэта. Здание включено в список памятников культуры государственного значения. 23 января 1831 года А.С. Пушкин заключил договор о найме квартиры в особняке на Арбате, принадлежавшем дворянской семье Хитрово. 17 февраля 1831 года, накануне свадьбы, на «мальчишник» у поэта собрались его московские друзья. Сюда после венчания в Храме Большого Вознесения у Никитских ворот А.С. Пушкин привез свою молодую жену. Здесь прошли первые три месяца счастливой семейной жизни Пушкиных. При желании можете посетить музей в любое удобное для вас время, а я предлагаю отправиться дальше по нашему маршруту </p>
                         <p> Повернув в четвертый переулок налево и пройдя пару минут, Вы окажетесь на Новом Арбате. Для тех кто проголодался, предлагаю перекусить в любом из кафе на Новом Арбате, их здесь на любой вкус и кошелек. </p>
-                         <p> Прогуливаясь по Новому Арбату (в сторону его начала), мимо площади Арбатские Ворота, переходя на улицу Воздвиженка и минут через 6 Вы оказываетесь у Александровского Сада. Этот сад был основан в 1812 году, площадь 10 гектар и состоит из 3 частей: Верхнего, Среднего и Нижнего садов. <br> Предлагаю Вам прогуляться там, посмотреть на Могилу Неизвестного Солдата и Вечный огонь, Грот "Руины", Обелиск, Памятник патриарху Гермогену, Фонтанный комплекс, Памятник Александру I.</p>
+                         <p> Прогуливаясь по Новому Арбату (в сторону его начала), мимо площади Арбатские Ворота, переходя на улицу Воздвиженка и минут через 6 Вы оказываетесь у Александровского Сада. Этот сад был основан в 1812 году, площадь парка 10 гектар и состоит из 3 частей: Верхнего, Среднего и Нижнего садов. <br> Предлагаю Вам прогуляться там, посмотреть на Могилу Неизвестного Солдата и Вечный огонь, Грот "Руины", Обелиск, Памятник патриарху Гермогену, Фонтанный комплекс, Памятник Александру I.</p>
                         <p> Мемориал "Могила Неизвестного Солдата". В 25-летнюю годовщину разгрома гитлеровских войск под Москвой из братской могилы близ Зеленограда был поднят прах Неизвестного солдата и 3 декабря 1966 года с воинскими почестями перезахоронен в Александровском саду у стен Кремля. <br> Мемориально-архитектурный ансамбль "Могила Неизвестного Солдата" был создан у северной стены Кремля по проекту академика Академии художеств СССР, народного художника СССР, лауреата пяти Сталинских премий скульптора Н.В.Томского и известных архитекторов Д.И.Бурдина, В.А.Климова, Ю.Р.Рабаева. Мемориал был открыт 8 мая 1967 года в торжественной обстановке в присутствии государственных лиц и почётных гостей. Вечный огонь, доставленный из Ленинграда с Марсова поля, был зажжён генеральным секретарём ЦК КПСС Л.И.Брежневым, а факел передал ему Герой Советского Союза А.П.Маресьев.</p>
                     </div>
             </div>
@@ -131,7 +134,35 @@
                 </div>
             </div>
             <div class="col-sm-12 col-lg-9">
-                    <p> 25 мая 2013 года в Александровском саду по проекту народного художника России, академика Академии художеств С.А.Щербакова (архитектор И.Н.Воскресенский) в торжественной обстановке был открыт долгожданный памятник патриарху Гермогену (бронза, гранит). Величественная бронзовая фигура, выполненная в реалистической манере, установлена на высоком гранитном постаменте, с обеих сторон которого расположены рельефы со сценами его деяний. </p>
+                    <p> 25 мая 2013 года в Александровском саду по проекту народного художника России, академика Академии художеств С.А.Щербакова (архитектор И.Н.Воскресенский) в торжественной обстановке был открыт долгожданный памятник патриарху Гермогену (бронза, гранит). Величественная бронзовая фигура, выполненная в реалистической манере, установлена на высоком гранитном постаменте, с обеих сторон которого расположены рельефы со сценами его деяний. <br> Прижизненных портретов патриарха Гермогена не было, и, работая над его внешним обликом, скульптуры изучали "Царские титулярники" 1672-1673 годов с поясными портретами деятелей русской церкви и иконы патриарха, написанные в XVIII — XIX веках, а также получившую большую известность икону с изображением патриарха на фоне Чудова монастыря в Московском кремле, написанную В.М.Васнецовым в 1913 году. <br> На правой стороне постамента изображена сцена избрания в 1613 году шестнадцатилетнего Михаила Фёдоровича Романова на царский престол. На левой — с пластической выразительностью запечатлено посещение боярами-предателями и поляками заточенного в монастрыской темнице Гермогена. Волевым жестом поднятой вверх правой руки с двуперстием он изгоняет непрошенных гостей. <br> Под руководством С.А.Щербакова и И.Н.Воскресенского над созданием монумента трудился коллектив преподавателей и студентов Российской академии живописи, ваяния и зодчества (К.В.Зубрилин, Н.П.Сидоров, М.Салычева, Н.Николаев, Д.Гимальдинова, Ю.Роткова, Е.Коваленская, В.Убасев). </p>
+        </div>
+    </div>
+    
+        <div class="row">
+            <div class="col-sm-12 col-lg-3">
+                <div class="card">
+                    <img src="fontan.jpg" width=200 class="card-img-top">
+                    <div class="card-body">
+                        <h6> Фонтанный комплекс в Александровском саду </h6>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-lg-9">
+                    <p> Фонтанный комплекс расположен по краю Александровского сада вдоль Манежной площади, был установлен в 1996 году. Комплекс состоит из шести частей: «Гейзер», «Река Неглинная», «Завеса», «Улитка», «Водопад», «Грот», которые украшены скульптурами Зураба Церетели. Фонтан «Река Неглиная» имитирует русло реки, его украшает скульптурная композиция «Герои сказок» со скульптурами персонажей: русалки, Ивана-царевича с Царевной-лягушкой и другие. Второй крупный фонтан в составе комплекса — «Гейзер», украшен скульптурой «Времена года», изображающей четырёх коней — четыре сезона. Остальные фонтаны комплекса небольшие и служат дополнением к основной части. </p>
+        </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-lg-3">
+                <div class="card">
+                    <img src="alexander.jpg" width=200 class="card-img-top">
+                    <div class="card-body">
+                        <h6> Памятник императору Александру I </h6>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-lg-9">
+                    <p> ghkk.jb </p>
         </div>
     </div>
     </main>
