--- a/moscow.html
+++ b/moscow.html
@@ -165,6 +165,22 @@
                     <p> ghkk.jb </p>
         </div>
     </div>
+    <p> Чтобы пройти из Александровского сада на Красную площадь, Вам нужно выйти из ворот около Могилы Неизвестного Солдата. Когда Вы выйдете из Александровского сада, Вы увидите красное здание — это Государственный исторический музей.  </p>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-lg-3">
+                <div class="card">
+                    <img src="museum.jpg" width=200 class="card-img-top">
+                    <div class="card-body">
+                        <h6> Государственный исторический музей </h6>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-lg-9">
+                    <p>  Государственный исторический музей – крупнейший музей национальной истории Российского государства. Здесь хранятся бесценные памятники археологии, нумизматики, древнерусской живописи и книжности, оружие, произведения изобразительного и декоративно-прикладного искусства. Коллекции музея насчитывают около 5 миллионов музейных предметов и более 14 миллионов листов документальных материалов. В 2006 году Исторический музей закончил работу над постоянной экспозицией. На двух этажах в 39 залах представлена история России с древнейших времен до начала XX века. Экспозиция начинается на втором этаже. Он посвящен первобытному обществу, Древней Руси, раздробленности, борьбе с иноземными захватчиками, объединению России, культуре, освоению Сибири. На третьем этаже показана Россия, начиная с эпохи Петра I: политика, культура, экономика Российской империи. Музей прошел масштабную реконструкцию.В нем восстановлены исторические интерьеры, но в тоже время музей соответствует всем требованиям наших дней. Например, музей оборудован лифтом для инвалидов, имеет в наличии коляски. Для того, чтобы гостям музея были понятны исторические события, которые представлены через предметы, в залах размещены информационные материалы. Кроме бумажного информационного сопровождения, в экспозиции представлено большое число экранов, мониторов. Они демонстрируют предметы, которые не вошли в экспозицию или то, что не может увидеть посетитель. Например, в витрине представлена книга, ее нельзя взять в руки, а на мониторе перелистываются ее страницы. <br> В музее на 4 тысячах квадратных метров представлено около 22 тыс. предметов. Чтобы обойти экспозицию музея необходимо сделать более 4 тысяч шагов, что составляет около 3 км. Таков масштаб музея в цифрах. Если на каждый экспонат потратить около минуты для осмотра, то всего потребуется где-то 360 часов времени, а это только 0,5 % своих коллекций. </p>
+            </div>
+        </div>
+    </div>
     </main>
      <footer> 
 
