--- a/moscow.html
+++ b/moscow.html
@@ -3,6 +3,31 @@
  <head> 
      <title> Обзорная экскурсия по Москве</title>
      <style> 
+     .wrap {
+        position: fixed;
+        height: 100%;
+        top: 0;
+        width: 100px;
+        left: 0;
+    }
+    .controlbar {
+        height: 100%;
+        display: block;
+        text-decoration: none;
+        text-align: center;
+        background: #E1E7ED;
+        opacity: 0.7;
+    }
+    .bar-desc{
+        top: 20%;
+        position: relative;
+    }
+    a.controlbar {
+        opacity: 1;
+        text-decoration: none;
+        opacity: 1;
+        color: black;
+    }
      .container{ 
          display: flex; 
          flex-direction: column;  
@@ -21,6 +46,12 @@
           crossorigin="anonymous"> 
   </head> 
   <body>    
+        <a name="top"> </a>  
+        <div class="wrap">
+            <a href="#top" class="controlbar">
+                <span class="bar-desc"> Наверх </span>
+            </a>
+        </div>
       <header class="header"> 
           <h1> Обзорная экскурсия по Москве </h1> 
       </header> 
@@ -265,7 +296,35 @@
                         </div>
                 </div>
             </div>
-            
+            <div class="container">
+                    <div class="row">
+                        <div class="col-sm-12 col-lg-3">
+                            <div class="card">
+                                <img src="lenin.jpg" width=200 class="card-img-top">
+                                <div class="card-body">
+                                    <h6> Мавзолей Ленина </h6>
+                                    <p> Часы работы: ежедневно с 10:00 до 13:00, кроме понедельников и пятниц. <br> Вход бесплатный.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 col-lg-9">
+                                <p> Мавзолей Ленина — памятник, музей, а по сути — усыпальница, расположенная в самом центре Красной площади. Согласно распространенной версии, идея бальзамировать Ленина принадлежала Калинину и «за» выступили практически все победившие на тот момент большевики. Отрицательно к этой идее отнесся только Троцкий, который назвал этот посыл «настоящим безумием». Однако более поздние исследования говорят о том, что сама идея изначально принадлежала Сталину. Он считал, что простое отрицание существующей религии — недопустимо и необходимо совместно с национальной идеей создать практически новую религию, культ, который станет основой для нового строя. В качестве «бога» был выбрал Ленин, а в качестве главного жреца — сам Сталин. </p>
+                            </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12 col-lg-3">
+                            <div class="card">
+                                <img src="spasskaya.jpg" width=200 class="card-img-top">
+                                <div class="card-body">
+                                        <h6> Спасская башня Московского кремля </h6>
+                                        <p>  </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-12 col-lg-9">
+                                    <p> В 1491 году при князе Иване III для укрепления северо-восточной части города была сооружена Спасская башня. Строительство выполнил архитектор Пьетро Антонио Солари. Сначала она называлась Фроловской, по имени церкви во имя Святых мучеников Фрола и Лавра, расположенной рядом. Сооружение было в два раза ниже, чем сейчас. Многоярусный верх и каменный купол в готическом стиле были возведены значительно позже - в 1624-1625 гг. английским архитектором Христофором Галовеем и русским мастером Баженом Огурцовым. Указом царя Алексея Михайловича 16 апреля 1658 года башня была переименована в Спасскую. Такое название она получила, поскольку через нее шла дорога к Спасо-Смоленскому храму. Есть мнение, что название она получила в честь иконы Спаса Нерукотворного, помещенной над воротами со стороны Красной площади. Спасские ворота – самые главные из Кремлевских ворот. Мужчины снимали головные уборы перед образом Спасителя со стороны Красной площади. Через них нельзя было проезжать верхом. По легенде, когда Наполеон проезжал через эти ворота, ветер сорвал с него треуголку. Все цари перед коронацией проходили через эти ворота. Воины уходили отсюда на решающие битвы. На протяжении многих лет Спасские ворота открывались очень редко, только в исключительных случаях, например, для проезда кортежа президента. С августа 2014 года через ворота можно выйти на Красную площадь. Попасть в Кремль по прежнему можно только через Кутафью башню. Спасская Башня - квадратная в основании и имеет 10 этажей. Ее высота - 71 метр. В середине 17 века на ней была помещена фигура двуглавого орла - герба России. Эксперты считали, что образ Спасителя над ее воротами безвозвратно потерян. Предположительно в 1937 году, в год юбилея революции, икона Спасителя, как и другие надвратные образы, была замурована. Но недавно она была найдена. По инициативе Фонда Андрея Первозванного 29 июня 2010 года специалисты начали ее реставрацию. Икона хорошо сохранилась. Ее сюжет посвящен избавлению Москвы от нашествия хана Мехмет-Гирея. Тогда, в 1521 году, преподобные Сергий и Варлаам просили Богородицу о заступничестве перед Богом. И Мехмет-Гирей отступил. Икона страдала и от пожара и во время войны с Наполеоном. После восстановления будет проводиться ее реставрация. <br> Первые часы на Спасской башне были установлены  в 1491 году. В дальнейшем они неоднократно менялись и реставрировались. Так, в 1625 году  под руководством английского мастера Христофора Галовея были сделаны новые, которые исполняли музыку. В 1705 году по указанию Петра I часы были переделаны по немецкому образцу с циферблатом на 12 часов. В 1851-1852 гг. на 8-10 ярусах установили куранты, исполняющие поочередно «Марш Преображенского Полка» и гимн «Коль славен наш Господь в Сионе» Дмитрия Бортнянского. Эти мелодии звучали до 1917 года. В 1920 году на курантах была подобрана мелодия Интернационала. В 1999 году стрелки и цифры позолотили. Куранты стали исполнять государственный гимн России. Высота римских цифр часов составляет 0,72 метра. Длина часовой стрелки - 2,97 м, минутной - 3,27 м. Часы заводятся с помощью трёх электромоторов. Бой часов осуществляется при помощи молотка, соединённого с механизмом и колоколом. Циферблаты имеют диаметр 6,12 м и выходят на четыре стороны. В 1935 году Царского орла на Спасской башне сменила первая пятиконечная звезда - символ советской эпохи. Она была медная, покрыта золотом и уральскими самоцветами. Через 2 года ее сменила рубиновая звезда. Первая звезда теперь венчает шпиль Северного речного вокзала. Размах крыльев новой звезды составляет 3,75 метра. Это чуть меньше, чем у первой. Внутри звезды круглосуточно горит лампа мощностью 5000 вт. </p>
+                                </div>
+                            </div>
     </main>
      <footer> 
 
